--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
-ntlk>=3.4.5
+Flask==1.1.1
+gunicorn==19.9.0
+itsdangerous==1.1.0
+Jinja2==2.10.3
+MarkupSafe==1.1.1
+Werkzeug==0.16.0
+numpy>=1.16.5
+scipy>=0.15.1
 scikit-learn>=0.21.3
 pandas>=0.25.1
-gunicorn==19.9.0
-numpy>=1.16.5
-Flask==1.1.1
-Jinja2==2.10.3
-Werkzeug==0.16.0
-MarkupSafe==1.1.1
-scipy>=0.15.1
-itsdangerous==1.1.0
+nltk>=3.4.5
